# flatline

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: release.yml
.sqlx/: query-097f792360a63b6363e81ee381fbee7a4a53a4ed27df320898f95738df29a1fe.json  query-5948702f62762477f2f511228adbe2e7f024d40171eed7228dc9977f269ff739.json  query-9d751d439d8d1984805fd82d0af34d66896b69bebae2aa33231d52438b002019.json  query-dcf0152d13827d482677c5a97861a61559567bf4a806f053b9a155b336a7898a.json
crates/frontend/: Cargo.toml  Trunk.toml  index.html
crates/frontend/src/: api.rs  hooks.rs  layout.rs  main.rs  routes.rs  style.css  utils.rs
crates/frontend/src/components/: bar_tooltip.rs  mod.rs  monitor_card.rs  notif_linker.rs  sparkline.rs  stats_bar.rs
crates/frontend/src/pages/: login.rs  mod.rs
crates/frontend/src/pages/create/: form.rs  mod.rs
crates/frontend/src/pages/monitor/: charts.rs  detail.rs  mod.rs
crates/frontend/src/pages/monitors/: dashboard.rs  mod.rs
crates/frontend/src/pages/notifications/: channel_modal.rs  discord.rs  mod.rs  page.rs  slack.rs  telegram.rs  webhook.rs
crates/server/: Cargo.toml
crates/server/src/: config.rs  error.rs  lib.rs  main.rs  sweeper.rs
crates/server/src/api/: mod.rs  monitor_notifications.rs  monitors.rs  notification_channels.rs  stats.rs
crates/server/src/auth/: handlers.rs  middleware.rs  mod.rs  oidc.rs
crates/server/src/db/: mod.rs  sqlite.rs  sqlite_check.rs  sqlite_incident.rs  sqlite_monitor.rs  sqlite_monitor_notification.rs  sqlite_notification_channel.rs  sqlite_user.rs
crates/server/src/monitor/: checker.rs  engine.rs  http.rs  mod.rs  worker.rs
crates/server/src/notify/: discord.rs  mod.rs  slack.rs  telegram.rs  webhook.rs
crates/server/tests/: monitors.rs
crates/shared/: Cargo.toml
crates/shared/src/: api.rs  models.rs
migrations/: 20260602190045_monitors.sql  20260603182141_monitor_checks.sql  20260604151718_incidents.sql  20260604160000_notification_channels.sql  20260604160001_monitor_notifications.sql  20260604160002_add_retries_to_monitors.sql  20260604160003_users.sql
