[package]
name = "frontend"
version = "0.1.0"
edition = "2024"

# Standalone workspace so this profile applies to the wasm build only
# (the root workspace excludes this crate).
[workspace]

[profile.release]
opt-level = 'z'   # optimize for size
lto = true
codegen-units = 1
panic = 'abort'
strip = true

[dependencies]
shared = { path = "../shared" }
uuid = { version = "1" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
yew = { version = "0.22.0", features = ["csr"] }
yew-router = "0.19.0"
gloo-net = { version = "0.6", features = ["http"] }
gloo-timers = { version = "0.3", features = ["futures"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["HtmlSelectElement", "HtmlInputElement", "HtmlTextAreaElement", "Window", "Location", "KeyboardEvent", "InputEvent", "EventSource", "MessageEvent"] }
