[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
rust-embed = "8"
mime_guess = "2"
tokio = { version = "1", features = ["full"] }
axum = "0.7"
sqlx = { version = "0.7", features = ["sqlite", "runtime-tokio", "uuid", "chrono", "migrate"] }
async-trait = "0.1"
dotenvy = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v7"] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dashmap = "5"
config = "0.14"
reqwest = { version = "0.12", features = ["json"] }
utoipa = { version = "4", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "7", features = ["axum"] }
shared = { path = "../shared", features = ["utoipa"] }
tower = { version = "0.4", features = ["util"] }
http-body-util = "0.1"
mockall = "0.14.0"
anyhow = "1.0"
tokio-util = "0.7.18"
openidconnect = { version = "4", default-features = false, features = ["reqwest"] }
jsonwebtoken  = { version = "10", default-features = false, features = ["rust_crypto"] }
axum-extra    = { version = "0.12", features = ["cookie"] }
futures-util  = "0.3"
tokio-stream  = { version = "0.1", features = ["sync"] }
