[package]
name = "shared"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1", features = ["derive"] }
uuid = { version = "1", features = ["v7", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
serde_json = "1"
utoipa = { version = "4", features = ["uuid", "chrono"] }
anyhow = "1.0"
