[package]
name = "shared"
version = "0.3.1"
edition = "2024"

[features]
default = []
utoipa = ["dep:utoipa"]

[dependencies]
serde = { version = "1", features = ["derive"] }
uuid = { version = "1", features = ["serde"] }
chrono = { version = "0.4", features = ["serde"] }
serde_json = "1"
utoipa = { version = "4", features = ["uuid", "chrono"], optional = true }
anyhow = "1.0"
